services/systems/vault/overlays/dev/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: secrets
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  rules:
    - backendRefs:
      - name: vault
        port: 8200
